@@ -2,6 +2,9 @@ Version 6.0 alpha: (12 Feb 2004)
 	* simbot.pl
 	   - We now exit the POE event loop in a way that lets us quit IRC
 	     without doing the famous "EOF from client."
+	   - New configuration option to make bot prompt for a quit message
+	     on an interrupt signal, and to set a default quit message if
+	     prompting is off.
 
 Version 6.0 alpha: (11 Feb 2004)
 
